# templates

./: flake.nix
.github/: renovate.json
rust-binary/: .gitignore  Cargo.toml  README.md  template
