[package]
name = "PACKAGE_NAME"
version = "0.0.0-semantic-release-managed"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edi>"]
license = "MIT OR Apache-2.0"
description = "DESCRIPTION"
readme = "README.md"
homepage = "https://github.com/GIT_ORGANIZATION/PACKAGE_NAME"
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/flake.{lock,nix}"
]

[dependencies]

[profile.dev]
# Disabling debug info speeds up builds significantly,
# and we don't rely on it for debugging very frequently.
debug = 0

[profile.release]
lto = true
codegen-units = 1
strip = true
